--- a/static/css/index.css
+++ b/static/css/index.css
@@ -19,12 +19,46 @@ div{
 
 
 .intro{
-    width: 500px;
+    width: 700px;
     height: 300px;
-    background-color: gray;
+    /*background-color: gray;*/
     top: 50%;
     left: 50%;
-    margin: -150px 0 0 -250px;
+    margin: -150px 0 0 -350px;
     position: absolute;
     text-align: center;
+}
+
+.time {
+    font-size: 150px;
+    font-weight: bold;
+    margin: 0px;
+}
+
+.hello {
+    font-size: 50px;
+    margin: 0px;
+}
+
+.todo-box{
+    margin-top: 80px;
+}
+
+.question {
+    font-size: 40px;
+    margin: 0px;
+}
+
+.input-underline{
+    border: 0;
+    border-bottom: 3px solid #000000;
+    background:transparent;
+    width: 500px;
+    height: 50px;
+    font-size: 30px;
+    text-align: center;
+}
+
+.input-underline:focus{
+    outline: none;
 }
